--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,23 @@
+async-timeout==5.0.1
 bcrypt==4.2.1
+bidict==0.23.1
 blinker==1.9.0
 click==8.1.8
 Flask==3.1.0
 Flask-Cors==5.0.0
+Flask-SocketIO==5.5.1
+Flask-SSE==1.0.0
+h11==0.14.0
 importlib_metadata==8.6.1
 itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
 mysql-connector-python==9.2.0
+python-engineio==4.11.2
+python-socketio==5.12.1
+redis==5.2.1
+simple-websocket==1.1.0
+six==1.17.0
 Werkzeug==3.1.3
+wsproto==1.2.0
 zipp==3.21.0
